proceeding with my beginner projects

--- a/Practice/p.html
+++ b/Practice/p.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="prac1style.css">
+    <link rel="stylesheet" href="prac1body.css">
+    <link rel="stylesheet" href="prac1header.css">
     <link rel="stylesheet" href="fb.css">
     <link rel="stylesheet" href="homebar.css">
     <link rel="stylesheet" href="text1.css">
@@ -150,9 +152,8 @@
         <p class="friends">20,219 mutual friends</p>
         <button type="button" class="addfriend">Add Friend</button>
       </div>
-      </div>
-  
     </div>
+
 
     
 
