--- a/Amazon Shipping Calculator/amazoncalc.html
+++ b/Amazon Shipping Calculator/amazoncalc.html
@@ -8,16 +8,52 @@
     </head>
     <body>
         <h1>Amazon Shipping Calculator</h1>
-        <input placeholder="Cost of order" class="js-cost-input" onkeydown="handleCostKeyDown(event);">
+
+        
+        <input placeholder="Cost of order" class="js-cost-input input" onkeydown="handleCostKeyDown(event);">
         <button class="tweet-button" onclick="calculateTotal()">Calculate</button>
         <P class="js-total"></P>
 
+
+        <button class="heads" onclick="clickK('heads')">HEADS</button>
+        <button class="tails" onclick="clickK('tails')">TAILS</button>
+        <p class="game"></p>
+
+
+        <input class="js-name input-name" placeholder="Name" onkeydown="handleNameKeyDown(event)">
+        <button class="name-submit" onclick="submit()">Submit</button>
+        <p class="js-name-submitted"></p>
+
         <script>
+            function handleNameKeyDown(event){
+                if(event.key === 'Enter'){
+                    submit()
+                }
+            }
+
+            function submit(){
+                const nameElement = document.querySelector('.js-name')
+                let name = nameElement.value
+                document.querySelector('.js-name-submitted').innerHTML = `Your name is: ${name}`
+            }
+            
+            function clickK(clickPar){
+                let clickValue = ''
+                if(clickPar === 'heads'){
+                    clickValue = 'heads'
+                    document.querySelector('.game').innerHTML = `You chose: ${clickValue}`
+                }else if(clickPar === 'tails'){
+                    clickValue = 'tails'
+                    document.querySelector('.game').innerHTML = `You chose: ${clickValue}`
+                }
+            }
+
             function handleCostKeyDown(event){
                 if(event.key === 'Enter'){
                     calculateTotal()
                 }
             }
+
             function calculateTotal(){
                 const inputElement = document.querySelector('.js-cost-input')
                 let cost = Number(inputElement.value)
@@ -28,6 +64,7 @@
 
                 document.querySelector('.js-total').innerHTML = `$${cost}`
             }
+
         </script>
     </body>
 </html>
