--- a/Rock Paper Scissors/rockpaperscissors2.html
+++ b/Rock Paper Scissors/rockpaperscissors2.html
@@ -7,18 +7,110 @@
         <link rel="stylesheet" href="ropasci.css">
     </head>
     <body>
-        <h1>ROCK PAPER SCISSORS GAME</h1>
-        <button class="tweet-button"><img src="images/rock-emoji.png" class="move-icon"></button>
-        <button class="tweet-button"><img src="images/paper-emoji.png" class="move-icon"></button>
-        <button class="tweet-button"><img src="images/scissors-emoji.png" class="move-icon"></button>
+        <header>
+            <h1>ROCK PAPER SCISSORS GAME</h1>
+        </header>
+        
+        <button class="tweet-button" onclick="rollGame('rock')">
+            <img src="images/rock-emoji.png" class="move-icon">
+        </button>
 
-        <p class="js-result result">You win</p>
-        <p class="js-moves">You player-image computer-image computer</p>
-        <p class="js-scoer score">win,loses,ties</p>
+        <button class="tweet-button" onclick="rollGame('paper')">
+            <img src="images/paper-emoji.png" class="move-icon">
+        </button>
 
+        <button class="tweet-button" onclick="rollGame('scissors')">
+            <img src="images/scissors-emoji.png" class="move-icon">
+        </button>
+
+        <p class="js-result result"></p>
+        <p class="js-moves"></p>
+        <p class="js-score score"></p>
+
+        <button class="tweet-button" class="reset-score-button" onclick="
+            score.wins= 0
+            score.loses = 0
+            score.ties = 0
+            localStorage.removeItem('score')
+            updateScore()
+            ">reset score</button>
 
         <script>
+            let score = JSON.parse(localStorage.getItem('score')) || {
+                wins: 0,
+                loses: 0,
+                ties: 0
+            }
 
+            updateScore();
+
+            function getComputerMove(){
+                const randNumber = Math.random()
+                let compMove = ''
+
+                if(randNumber >= 0 && randNumber < 1/3)
+                {
+                    compMove = 'rock'
+                }else if(randNumber >= 1/3 && randNumber < 2/3)
+                {
+                    compMove = 'paper'
+                }else if(randNumber >= 2/3 && randNumber < 1)
+                {
+                    compMove = 'scissors'
+                }
+                return compMove
+            }
+
+            function rollGame(myMove){
+                const computerRoll = getComputerMove()
+                let goal = '' 
+                if(myMove === 'rock'){
+                    if(computerRoll === 'rock'){
+                        goal = 'You Tie'
+                    }else if(computerRoll === 'paper'){
+                        goal = 'You Lose'
+                    }else if(computerRoll === 'scissors'){
+                        goal = 'You Win'
+                    }
+                }else if(myMove === 'paper'){
+                    if(computerRoll === 'rock'){
+                        goal = 'You Win'
+                    }else if(computerRoll === 'paper'){
+                        goal = 'You Tie'
+                    }else if(computerRoll === 'scissors'){
+                        goal = 'You Lose'
+                    }
+                }else if(myMove === 'scissors'){
+                    if(computerRoll === 'rock'){
+                        goal = 'You Lose'
+                    }else if(computerRoll === 'paper'){
+                        goal = 'You Win'
+                    }else if(computerRoll === 'scissors'){
+                        goal = 'You Tie'
+                    }
+                }
+
+                if(goal === 'You Win'){
+                    score.wins += 1
+                }else if(goal === 'You Lose'){
+                    score.loses += 1
+                }else if(goal === 'You Tie'){
+                    score.ties += 1
+                }
+
+                localStorage.setItem('score',JSON.stringify(score))
+
+                updateScore()
+
+                document.querySelector('.js-result').innerHTML = goal
+
+                document.querySelector('.js-moves').innerHTML = `You <img src="images/${myMove}-emoji.png" class="move-icon"> <img src="images/${computerRoll}-emoji.png" class="move-icon"> Computer`
+            }
+
+            function updateScore(){
+                document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Loses: ${score.loses}, Ties: ${score.ties}`
+            }
+            
         </script>
     </body>
 </html>
