--- a/ToDoList/ToDoList.html
+++ b/ToDoList/ToDoList.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="ToDoList.css">
     </head>
     <body>
-        
+        <header>
+            <h1>MY TO DO LIST</h1>
+        </header>
+        <main>
+            <input placeholder="Add Task" class="js-input-task">
+            <button onclick="addToDo()">Add</button>
+
+            <div class="js-todoList"></div>
+        </main>
+        <footer>
+
+        </footer>
+        <script src="ToDoList.js"></script>
     </body>
 </html>
