almost finished homepage

--- a/MyDairyFarmWebsite/index.html
+++ b/MyDairyFarmWebsite/index.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0" style="color:rgb(23, 180, 233);">Dairy Harbour</h1>
+            <h1 class="m-0" style="color:rgb(23, 180, 233);">Dairy Harbor</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" style="color:rgb(23, 180, 233);" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -86,15 +86,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="product.html" class="nav-item nav-link">Products</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="gallery.html" class="dropdown-item">Gallery</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
+                
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
@@ -132,7 +124,7 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 text-end">
-                                    <p class="fs-4 text-white">Welcome to Dairy Harbour Management Partner</p>
+                                    <p class="fs-4 text-white">Welcome to Dairy Harbor Management Partner</p>
                                     <h1 class="display-1 text-white mb-5 animated slideInRight">Dairy Farming Partner</h1>
 
                                 </div>
@@ -181,8 +173,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="section-title bg-white text-start pe-3" style="color:rgb(20, 185, 240);">About Us</p>
-                    <h1 class="mb-4" style="color:rgb(20, 185, 240);">Know About Dairy Harbour</h1>
-                    <p class="mb-4">Dairy Harbour is a comprehensive dairy farm management app designed to streamline dairy farm operations and maximize productivity. With innovative features that cover every aspect of dairy farming, Dairy Delight empowers you to efficiently manage your herd, optimize breeding, and monitor production and sales</p>
+                    <h1 class="mb-4" style="color:rgb(20, 185, 240);">Know About Dairy Harbor</h1>
+                    <p class="mb-4">Dairy Harbor is a comprehensive dairy farm management app designed to streamline dairy farm operations and maximize productivity. With innovative features that cover every aspect of dairy farming, Dairy Delight empowers you to efficiently manage your herd, optimize breeding, and monitor production and sales</p>
                     <div class="row g-5 pt-2 mb-5">
                         <div class="col-sm-6">
                             <div class="image1 mb-4">
@@ -218,7 +210,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title bg-white text-start pe-3" style="color:rgb(20, 185, 240);">Why Me!</p>
-                    <h1 class="mb-4" style="color:rgb(20, 185, 240);">Reasons to have Harbour App!</h1>
+                    <h1 class="mb-4" style="color:rgb(20, 185, 240);">Reasons to have Harbor App!</h1>
                     <p class="mb-4" style="color:rgb(0,0,0);">Our goal is to develop a dairy farm management app that offers a user-friendly interface and robust functionality, enabling farmers to efficiently oversee their operations, enhance productivity, and optimize profitability through streamlined livestock management, accurate production tracking, and sales monitoring.
 
                     </p>
@@ -262,7 +254,7 @@
                         <div class="col-sm-8">
                             <h2 class="mb-3" style="color:rgb(14, 181, 236);">Production Monitoring
                             </h2>
-                            <p class="text-white mb-4">The Production Monitoring module in Dairy Harbour empowers you to track and analyze your milk yield, enabling informed decisions to maximize productivity.
+                            <p class="text-white mb-4">The Production Monitoring module in Dairy Harbor empowers you to track and analyze your milk yield, enabling informed decisions to maximize productivity.
                             </p>
 
                         </div>
@@ -293,7 +285,7 @@
                             </div>
                             <h5 class="mb-3" style="color:rgb(14, 181, 236);">Artificial Insemination Management
                             </h4>
-                            <p class="mb-4">Dairy Harbours' Artificial Insemination Management module helps you optimize your breeding efforts, ensuring efficient and successful artificial insemination procedures.
+                            <p class="mb-4">Dairy Harbors' Artificial Insemination Management module helps you optimize your breeding efforts, ensuring efficient and successful artificial insemination procedures.
                             </p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
                         </div>
@@ -310,7 +302,7 @@
                             </div>
                             <h5 class="mb-3" style="color:rgb(14, 181, 236);">Milk Distribution and Sales
                             </h4>
-                            <p class="mb-4">Dairy Harbour' Milk Distribution and Sales module streamlines the management of your milk supply chain, ensuring efficient distribution and minimizing losses.
+                            <p class="mb-4">Dairy Harbor' Milk Distribution and Sales module streamlines the management of your milk supply chain, ensuring efficient distribution and minimizing losses.
 
                             </p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
@@ -328,7 +320,7 @@
                             </div>
                             <h5 class="mb-3" style="color:rgb(14, 181, 236);">Periodic Procedures Management
                             </h4>
-                            <p class="mb-4">Dairy Harbours' Periodic Procedures Management module helps you stay on top of essential health maintenance practices, ensuring the optimal well-being of your cattle.
+                            <p class="mb-4">Dairy Harbors' Periodic Procedures Management module helps you stay on top of essential health maintenance practices, ensuring the optimal well-being of your cattle.
 
                             </p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
@@ -346,7 +338,7 @@
                             </div>
                             <h5 class="mb-3" style="color:rgb(14, 181, 236);">Cattle Registration Module
                             </h4>
-                            <p class="mb-4">The Cattle Registration Module in Dairy Harbour streamlines the process of managing your herd, allowing you to efficiently organize and update cattle information.
+                            <p class="mb-4">The Cattle Registration Module in Dairy Harbor streamlines the process of managing your herd, allowing you to efficiently organize and update cattle information.
 
                             </p>
                             <a class="btn btn-square rounded-circle" href=""><i class="bi bi-chevron-double-right"></i></a>
@@ -526,14 +518,15 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2" style="color:white"><i class="fa fa-map-marker-alt me-3" style="color:black"></i>P.O. BOX 6200, NAIROBI, KENYA</p>
+                    <p class="mb-2" style="color:white"><i class="fa fa-phone-alt me-3" style="color:black"></i>Tel: 067-5870001-5,<br>0710285209,<br>0746917394,<br>0721292202,<br>0713920829,<br>0720630380,<br>0710285209</p>
+                    <p class="mb-2" style="color:white"><i class="fa fa-envelope me-3" style="color:black;"></i>Email: registrar@aa.jkuat.ac.ke,<br>
+                    kelvinmwendadoreen@gmail.com</p>
                     <div class="d-flex pt-3">
-                        <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -544,18 +537,10 @@
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Business Hours</h5>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
-                    <h6 class="text-light">Closed</h6>
-                </div>
+                
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p style="color:white;">Secure an opportunity with us by creating an account to get quality dairy farming experience.</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -568,15 +553,17 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid text-body copyright py-4" style="background-color:rgb(10, 147, 192);">
+    <div class="container-fluid text-body copyright py-4" style="background-color:rgb(10, 147, 192);color:white;">
         <div class="container">
-            <div class="row">
+            <div class="row" style="color:white">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-semi-bold" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a class="fw-semi-bold" href="#" style="color:white">Dairy Harbor Management App</a>, All Right Reserved.
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <a class="fw-semi-bold" href="#" style="color:white">Jomo Kenyatta University of Agriculture and Technology</a>, All Right Reserved.
+                </div>
+                <div class="col-md-6 text-center text-md-end" style="color:black">
+                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com" style="color:black;">Chocs Careers</a>
                 </div>
             </div>
         </div>
@@ -585,7 +572,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-lg-square rounded-circle back-to-top" style="background-color:rgb(3, 38, 49)"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
