--- a/MyDairyFarmWebsite/reject.html
+++ b/MyDairyFarmWebsite/reject.html
@@ -1,3 +1,13 @@
+<div class="nav-item dropdown">
+    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+    <div class="dropdown-menu bg-light m-0">
+        <a href="gallery.html" class="dropdown-item">Gallery</a>
+        <a href="feature.html" class="dropdown-item">Features</a>
+        <a href="team.html" class="dropdown-item">Our Team</a>
+        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+        <a href="404.html" class="dropdown-item">404 Page</a>
+    </div>
+
 <div class="col-lg-6">
     <div class="rounded overflow-hidden">
         <div class="row g-0">
